RESOLVED FIXED214761
Fix exception check handling below postMessage().
https://bugs.webkit.org/show_bug.cgi?id=214761
Summary Fix exception check handling below postMessage().
Mark Lam
Reported 2020-07-24 14:43:36 PDT
Attachments
proposed patch. (5.12 KB, patch)
2020-07-24 14:47 PDT, Mark Lam
ysuzuki: review+
Mark Lam
Comment 1 2020-07-24 14:47:12 PDT
Created attachment 405186 [details] proposed patch.
Yusuke Suzuki
Comment 2 2020-07-24 14:48:21 PDT
Comment on attachment 405186 [details] proposed patch. r=me
Keith Miller
Comment 3 2020-07-24 14:48:57 PDT
Comment on attachment 405186 [details] proposed patch. r=me.
Mark Lam
Comment 4 2020-07-24 15:56:36 PDT
Thanks for the reviews. Landed in r264866: <http://trac.webkit.org/r264866>.
Note You need to log in before you can comment on or make changes to this bug.