Fix exception check handling below postMessage(). https://bugs.webkit.org/show_bug.cgi?id=214761 <rdar://problem/65932136>

Reviewed by Yusuke Suzuki and Keith Miller.

Source/WebCore:

Test: js/dom/missing-exception-check-below-postMessage.html

* bindings/js/JSDOMConvertSequences.h:
(WebCore::Detail::SequenceConverter::convertArray):
(WebCore::Detail::SequenceConverter::convert):

LayoutTests:

* js/dom/missing-exception-check-below-postMessage-expected.txt: Added.
* js/dom/missing-exception-check-below-postMessage.html: Added.



Canonical link: https://commits.webkit.org/227589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264866 268f45cc-cd09-0410-ab3c-d52691b4dbfc